Do not use a default implicit target env configuration